# DaliMaster

./: README.md  digikey.txt  uart2dali_mr3020.brd  uart2dali_mr3020.sch  uart2dali_mr3020_2.brd  uart2dali_mr3020_2.sch  uart2dali_mr3020_3.brd  uart2dali_mr3020_3.sch
firmware/: DaliMaster.c  Interpreter.c  Interpreter.h  SConstruct  dali.c  dali.h  dali_codes.h  dali_encode.c  dali_encode.h  euart.c  euart.h  fifo.h  startup_values.c  startup_values.h  suart.c  suart.h
firmware/tests/firmware_test/: CMakeLists.txt  firmware_tests.cpp
firmware/tests/soft_uart_2/: SConstruct  fifo.h  huart.c  huart.h  main.c  suart.c  suart.h
